[package]
name = "unicorn_hat_mini"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Interface to the Pimoroni Unicorn HAT Mini on a Raspberry Pi"
repository = "https://github.com/daniel-tp/unicorn_hat_mini"

[lib]
name = "unicorn_hat_mini"
path = "src/lib.rs"

[[bin]]
name = "unicorn_hat_mini"
path = "src/bin.rs"

[dependencies]
rppal= "0.14"
rgb = "0.8"
thiserror = "1.0.37"
ctrlc = "3.2.4"